fix(CI): corrected dockerHub repo name 2.0

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build docker image
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/investor-frontend:$IMAGE_TAG .
-          docker tag ${{ secrets.DOCKERHUB_USERNAME }}/investor-frontend:$IMAGE_TAG ${{ secrets.DOCKERHUB_USERNAME }}/investinvestor-frontendor:latest
+          docker tag ${{ secrets.DOCKERHUB_USERNAME }}/investor-frontend:$IMAGE_TAG ${{ secrets.DOCKERHUB_USERNAME }}/investor-frontend:latest
 
       - name: Push Docker image
         run: |
