--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Inject environment variables 
+        run: sed -i 's|__API__URL__|'"$BACKEND_URL"'|g'
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
