--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Inject environment variables 
-        run: sed -i 's|__API__URL__|'"$BACKEND_URL"'|g'
+        run: sed -i 's|__API__URL__|'"$BACKEND_URL"'|g' ./config.js
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
