--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,6 +12,8 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Inject environment variables 
+        env: 
+          BACKEND_URL: ${{ vars.BACKEND_URL }}
         run: sed -i 's|__API__URL__|'"$BACKEND_URL"'|g' js/config.js
 
       - name: Login to Docker Hub
